--- a/css/custom.css
+++ b/css/custom.css
@@ -18,6 +18,7 @@ The grouped styles are:
 - Shapes
 - Element Effect Styles
 - Style for text elements
+- ColorModeToggler
 
 - Preloader
 
@@ -787,6 +788,25 @@ h4{
   font-size: 1.125em;
 }
 
+/* ColorModeToggler*/
+.cmtContainer{
+  min-height: 20px;
+  min-width: 60px;
+  background-color: rgb(21,21,21);
+  /*border: solid 2px rgb(21,21,21);*/
+  border-radius: 35px;
+  padding: 5px;
+}
+
+.cmtCirc{
+  width: 15px;
+  height: 15px;
+  background-color: rgb(250,250,250);
+  border-radius: 100%;
+  position: relative;
+  /*border: solid 2px rgb(21,21,21);*/
+}
+
 /* Preloader */
 
 .loader-container{
@@ -978,6 +998,10 @@ h4{
     position: fixed;
   }
 
+  .cmtContainer{
+    visibility: hidden;
+  }
+
 }
 
 /* Large devices */
@@ -1120,6 +1144,9 @@ h4{
     position: relative;
   }
 
+  .cmtContainer{
+    visibility: visible;
+  }
 
 }
 
