--- a/css/custom.css
+++ b/css/custom.css
@@ -19,6 +19,7 @@ The grouped styles are:
 - Element Effect Styles
 - Style for text elements
 - ColorModeToggler
+- Cookie Warner
 
 - Preloader
 
@@ -808,6 +809,15 @@ h4{
   /*border: solid 2px rgb(21,21,21);*/
 }
 
+/* Cookie Warner*/
+.cookieWarning{
+  background-color: rgba(21,21,21,0.75);
+}
+
+#cookieWarning{
+  bottom: -150px;
+}
+
 /* Preloader */
 
 .loader-container{
@@ -1003,6 +1013,10 @@ h4{
     visibility: hidden;
   }
 
+  #cookieWarning{
+    visibility: hidden;
+  }
+
 }
 
 /* Large devices */
@@ -1146,6 +1160,10 @@ h4{
   }
 
   .cmtContainer{
+    visibility: visible;
+  }
+
+  #cookieWarning{
     visibility: visible;
   }
 
