Started working on emoji symbol in colortoggler

--- a/css/custom.css
+++ b/css/custom.css
@@ -1167,6 +1167,12 @@ h4{
     visibility: visible;
   }
 
+  .cmtSymbol{
+    position: relative;
+    top: -6px;
+    left: -3px;
+  }
+
 }
 
 /* Extra large devices*/
