--- a/css/custom.css
+++ b/css/custom.css
@@ -20,6 +20,7 @@ The grouped styles are:
 - Style for text elements
 - ColorModeToggler
 - Cookie Warner
+- ColorController
 
 - Preloader
 
@@ -816,6 +817,11 @@ h4{
 
 #cookieWarning{
   bottom: -150px;
+}
+
+/* Color Controller */
+.color-neg-fg{
+  color: rgb(250,250,250);
 }
 
 /* Preloader */
