--- a/css/custom.css
+++ b/css/custom.css
@@ -95,11 +95,11 @@ button{
 }
 
 button:hover{
-  background-color: white;
+  /*background-color: white;
   color: #151515;
   border: solid 1px;
   border-radius: 10px;
-  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.25);
+  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.25);*/
   transform: translateY(-2px);
 }
 
