--- a/css/animation.css
+++ b/css/animation.css
@@ -1,43 +1,43 @@
 @keyframes puller{
   0%{
-    top: 50px;
+    transform: translateY(0px) ;
   }
   50%{
-    top: -50px;
+    transform: translateY(-100px);
   }
   100%{
-    top: 50px;
+    transform: translateY(0px);
   }
 }
 
-/*
 .divSmallCirc{
   animation-name: puller;
   animation-duration: 15s;
+  animation-delay: 5s;
   animation-iteration-count: infinite;
   box-shadow: 0px 4px 6px 0px rgba(0,0,0,0.05);
 }
-
 
 .divBigCirc{
   animation-name: puller;
   animation-duration: 20s;
+  animation-delay: 7.5s;
   animation-iteration-count: infinite;
   box-shadow: 0px 4px 6px 0px rgba(0,0,0,0.05);
 }
-*/
+
 @keyframes float {
   0%{
-    margin-top: -250px;
+    transform: translateY(0px);
   }
   50%{
-    margin-top: -150px;
+    transform: translateY(-50px);
   }
   100%{
-    margin-top: -250px;
+    transform: translateY(0px);
   }
 }
-/*
+
 .aboutCirc{
   animation-name: float;
   animation-duration: 15s;
@@ -45,7 +45,7 @@
   animation-timing-function: ease-in-out;
   box-shadow: 0px 4px 6px 0px rgba(0,0,0,0.05);
 }
-*/
+
 @keyframes gradient {
 	0% {
 		background-position: 0% 50%;
