--- a/css/animation.css
+++ b/css/animation.css
@@ -11,19 +11,22 @@
 }
 
 .divSmallCirc{
-  animation-name: puller;
-  animation-duration: 15s;
-  animation-delay: 5s;
-  animation-iteration-count: infinite;
+  animation: puller 15s ease-in-out 5s infinite alternate;
   box-shadow: 0px 4px 6px 0px rgba(0,0,0,0.05);
 }
 
 .divBigCirc{
-  animation-name: puller;
-  animation-duration: 20s;
-  animation-delay: 7.5s;
-  animation-iteration-count: infinite;
+  animation: puller 20s ease-in-out 7.5s infinite alternate;
   box-shadow: 0px 4px 6px 0px rgba(0,0,0,0.05);
+}
+
+@keyframes farge{
+  0%{
+    background-color: blue;
+  }
+  100%{
+    background-color: yellow;
+  }
 }
 
 @keyframes float {
