--- a/css/custom.css
+++ b/css/custom.css
@@ -41,6 +41,7 @@ html {
 * {
     text-rendering: optimizeLegibility !important;
     -webkit-font-smoothing: antialiased !important;
+    box-sizing: border-box;
 }
 
 a:hover,
@@ -55,8 +56,6 @@ a:active {
     padding: 0px;
 }
 
-
-
 .navbar2 {
     position: relative;
     display: -ms-flexbox;
@@ -69,13 +68,6 @@ a:active {
     justify-content: space-between;
     padding: 0;
 }
-
-
-/*
-.portfolioCol{
-  min-width: 400px;
-}
-*/
 
 .portfolioLeftCol {
     margin-right: 50px;
@@ -94,8 +86,11 @@ a:active {
 }
 
 button {
+    padding: 5px 10px;
     background-color: rgb(21, 21, 21);
     border: none;
+    border-radius: 10px;
+    border: 2px solid transparent;
     transition: transform 0.25s;
 }
 
@@ -125,9 +120,7 @@ button:hover {
     color: rgb(250, 250, 250);
 }
 
-.cvButton {
-    width: 115px;
-}
+
 
 
 /* Carousel Styles*/
@@ -313,22 +306,6 @@ button:hover {
     padding: 0px;
     margin-top: 20px;
 }
-
-
-/*
-.outerContainer{
-  margin-left: min(70px, auto);
-  margin-right: min(70px, auto);
-  width: auto;
-}
-*/
-
-
-/*
-.container{
-  max-width: 1300px;
-}
-*/
 
 .circContainer {
     position: relative;
@@ -550,7 +527,6 @@ button:hover {
 /* Element Effect Styles */
 
 .dropShadow {
-    /*box-shadow: 0px 4px 6px 0px rgba(0,0,0,0.10);*/
     box-shadow: 0 13px 27px -5px hsla(0, 0%, 0%, 0.25), 0 8px 16px -8px hsla(0, 0%, 0%, 0.3), 0 -6px 16px -6px hsla(0, 0%, 0%, 0.03);
 }
 
@@ -712,18 +688,6 @@ button:hover {
 Formula for calculating em: pixels/16=em
 */
 
-
-/*
-.responsiveAlign{
-  /*
-  This class is meant to change text-alignment
-  from left-alignment on largre screens to
-  center-alignment on small screens.
-  
-  text-align: ;
-}
-*/
-
 .responsiveInfoText {
     /*
   This class is meant to manipulate the
@@ -842,7 +806,6 @@ h4 {
     min-height: 20px;
     min-width: 50px;
     background-color: rgb(21, 21, 21);
-    /*border: solid 2px rgb(21,21,21);*/
     border-radius: 35px;
     padding: 5px;
     cursor: pointer;
@@ -854,7 +817,6 @@ h4 {
     background-color: rgb(250, 250, 250);
     border-radius: 100%;
     position: relative;
-    /*border: solid 2px rgb(21,21,21);*/
 }
 
 
@@ -913,7 +875,6 @@ h4 {
 .loaderCircContainer {
     width: 25px;
     height: 125px;
-    /*background-color: lightGray;*/
     position: absolute;
 }
 
@@ -922,8 +883,6 @@ h4 {
     width: 25px;
     height: 25px;
     border-radius: 50%;
-    /*background: linear-gradient(135deg, #E52E7D, #FF9D33, #E52E7D, #FF9D33);
-  background-size: 400% 400%;*/
     background-color: lightgray;
     z-index: +2;
 }
@@ -934,15 +893,12 @@ h4 {
     border-radius: 50%;
     margin-left: 10px;
     margin-right: 10px;
-    /*background: linear-gradient(135deg, #E52E7D, #FF9D33, #E52E7D, #FF9D33);
-  background-size: 400% 400%;*/
     background-color: lightgray;
 }
 
 .loaderCenter {
     width: 25px;
     height: 125px;
-    /*background-color: lightgray;*/
 }
 
 
@@ -970,15 +926,13 @@ h4 {
     .aboutTitle {
         font-size: 2.5em;
     }
+    
     button {
-        min-width: calc(95px * 2);
-        min-height: calc(37px * 2);
+        padding: calc(5px * 2) calc(10px * 2);
         font-size: calc(16px * 2);
         border-radius: calc(10px * 2);
     }
-    .cvButton {
-        width: 250px;
-    }
+    
     /* FontSizeSmall */
     h1 {
         font-size: 7em;
@@ -1142,18 +1096,13 @@ h4 {
     .aboutTitle {
         font-size: 4.6875em;
     }
+    
     button {
-        min-width: 95px;
-        min-height: 37px;
+        padding: 5px 10px;
         font-size: 1.125em;
         border-radius: 10px;
     }
-    .cvButton {
-        width: 115px;
-        height: 37px;
-        border-radius: 10px;
-        font-size: 16px;
-    }
+    
     /* FontSizeLarge */
     h1 {
         font-size: 4.6875em;
