--- a/css/custom.css
+++ b/css/custom.css
@@ -95,29 +95,34 @@ button {
 }
 
 button:hover {
-    transform: translateY(-2px);
+    /*transform: translateY(-2px);*/
 }
 
 .posButton {
     background-color: rgb(21, 21, 21);
     color: rgb(250, 250, 250);
+    transition: color 150ms linear, background-color 150ms linear, border 150ms linear;
 }
 
 .posButton:hover {
     background-color: rgb(250, 250, 250);
     border: 2px solid rgb(21, 21, 21);
     color: rgb(21, 21, 21);
+    transition: color 150ms linear, background-color 150ms linear, border 150ms linear;
+    
 }
 
 .negButton {
     background-color: rgb(250, 250, 250);
     color: rgb(21, 21, 21);
+    transition: color 150ms linear, background-color 150ms linear, border 150ms linear;
 }
 
 .negButton:hover {
     background-color: rgb(21, 21, 21);
     border: 2px solid rgb(250, 250, 250);
     color: rgb(250, 250, 250);
+    transition: color 150ms linear, background-color 150ms linear, border 150ms linear;
 }
 
 
