--- a/css/custom.css
+++ b/css/custom.css
@@ -92,6 +92,7 @@ button {
     border-radius: 10px;
     border: 2px solid transparent;
     transition: transform 0.25s;
+    font-weight: 500;
 }
 
 .posButton {
@@ -101,11 +102,23 @@ button {
 }
 
 .posButton:hover {
-    background-color: rgb(250, 250, 250);
+    background-color: rgba(250, 250, 250, 0);
     border: 2px solid rgb(21, 21, 21);
     color: rgb(21, 21, 21);
     transition: color 150ms linear, background-color 150ms linear, border 150ms linear;
     
+}
+
+.sucButton {
+    background-color: #26d05a;
+    color: rgb(21, 21, 21);
+    transition: color 150ms linear, background-color 150ms linear, border 150ms linear;
+}
+
+.sucButton:hover {
+    background-color: rgba(0, 0, 0, 0);
+    border: 2px solid #26d05a;
+    color: #26d05a;
 }
 
 .negButton {
@@ -115,7 +128,7 @@ button {
 }
 
 .negButton:hover {
-    background-color: rgb(21, 21, 21);
+    background-color: rgba(21, 21, 21, 0);
     border: 2px solid rgb(250, 250, 250);
     color: rgb(250, 250, 250);
     transition: color 150ms linear, background-color 150ms linear, border 150ms linear;
@@ -825,10 +838,16 @@ h4 {
 
 .cookieWarning {
     background-color: rgba(21, 21, 21, 0.90);
+    backdrop-filter: blur(10px);
 }
 
 #cookieWarning {
     bottom: -150px;
+}
+
+#cookieWarnerInfo {
+    height: 0px;
+    overflow: hidden;
 }
 
 
