--- a/css/custom.css
+++ b/css/custom.css
@@ -838,11 +838,11 @@ h4 {
 
 .cookieWarning {
     background-color: rgba(21, 21, 21, 0.90);
-    backdrop-filter: blur(10px);
 }
 
 #cookieWarning {
     bottom: -150px;
+    display: none;
 }
 
 #cookieWarnerInfo {
