--- a/css/custom.css
+++ b/css/custom.css
@@ -107,7 +107,13 @@ button {
     border: 2px solid rgb(21, 21, 21);
     color: rgb(21, 21, 21);
     transition: color 150ms linear, background-color 150ms linear, border 150ms linear;
-    
+}
+
+.posButton:active {
+    background-color: rgba(250, 250, 250, 0);
+    border: 2px solid rgb(21, 21, 21);
+    color: rgb(21, 21, 21);
+    transition: color 150ms linear, background-color 150ms linear, border 150ms linear;
 }
 
 .sucButton {
@@ -129,6 +135,13 @@ button {
 }
 
 .negButton:hover {
+    background-color: rgba(21, 21, 21, 0);
+    border: 2px solid rgb(250, 250, 250);
+    color: rgb(250, 250, 250);
+    transition: color 150ms linear, background-color 150ms linear, border 150ms linear;
+}
+
+.negButton:active {
     background-color: rgba(21, 21, 21, 0);
     border: 2px solid rgb(250, 250, 250);
     color: rgb(250, 250, 250);
