--- a/css/custom.css
+++ b/css/custom.css
@@ -96,6 +96,10 @@ button {
     font-weight: 500;
 }
 
+button:focus{
+    outline: none;
+}
+
 .posButton {
     background-color: rgb(21, 21, 21);
     color: rgb(250, 250, 250);
